output and input file format can be changed

--- a/RawConverter/UserSettings.settings
+++ b/RawConverter/UserSettings.settings
@@ -5,5 +5,8 @@
     <Setting Name="InputFileType" Type="System.String" Scope="User">
       <Value Profile="(Default)">orf</Value>
     </Setting>
+    <Setting Name="OutputFileType" Type="System.String" Scope="User">
+      <Value Profile="(Default)">png</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
